# Libretto

./: AGENT.md  CHANGELOG.md  CNAME  DATA_PROVENANCE.md  FROZEN.md  LICENSE  ONBOARDING.md  README.md  index.html  pyproject.toml  requirements.txt
libretto/: AGENT.md  CHANGELOG.md  FROZEN.md  FROZEN_CORE.sha256  ONBOARDING.md  README.md  __init__.py  pyproject.toml
libretto/_morph_test_cases/: cases.json  morph_song_0348_song_1137_case.json  morph_song_0593_song_0820_case.json  morph_song_0820_song_0896_case.json  morph_song_0896_song_1302_case.json  morph_song_1137_song_0593_case.json  morph_song_1302_song_1542_case.json  morph_song_1375_song_1511_case.json  morph_song_1455_song_1477_case.json  morph_song_1477_song_0348_case.json  morph_song_1511_song_1455_case.json  morph_song_1542_song_1375_case.json
libretto/compare/: README.md  __init__.py  __main__.py  abc.py  benchmark.py  cost.py
libretto/core/: __init__.py  axes_v3.py  axis_feedback.py  band_check.py  copy_risk.py  fingerprint.py  gaptask_channel_check.py  genre_band_check.py  grammar_to_midi.py  metric_discovery.py  midi_to_grammar.py  pattern_catalog.py  understanding_probe.py  within_song_variation.py
libretto/corpus/: __init__.py  build.py  distribution.py  genres.py  reencode.py
libretto/data/: _wsv_tmp.txt  axis_ce_weights.json  corpus_distribution.json  corpus_distribution_314.json  corpus_fps.json  gaptask_region_c1_budget.json  gaptask_region_reprise_p75.json  metric_corpus.json  newgen_calibration.json  within_song_variation_dist.json
libretto/discovery/: candidate_metrics.py
libretto/experiments/: README.md
libretto/generation/: interface.py
libretto/tests/: test_accompaniment.py  test_anomaly.py  test_chunked.py  test_compare.py  test_core.py  test_diagnose.py  test_education.py  test_gaptask_reproduce.py  test_genre_loop.py  test_morph_loop.py  test_morph_metric.py  test_newgen_adaptive.py  test_refine_loop.py  test_retrieval_ablation.py  test_validation.py
libretto/tools/: check_frozen_core.py  git-guard.sh
libretto/validation/: README.md  __init__.py  __main__.py  _audiobox_score.py  judge.py  levers.py  validate.py
static/education/: h1_Aharmmin.mid  h2_Dmaj.mid  h3_Fmaj.mid  h4_Bbmaj.mid  h5_Edorian.mid  h6_Gmixo.mid  h7_Charmmin.mid  h8_F#min.mid
(+1708 files in other folders)
