[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "libretto"
version = "2.0.0"
description = "Descriptive symbolic-music fingerprint environment (29-axis, frozen 314-song corpus)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pretty_midi>=0.2.10",
    "music21>=9.1",
]

[project.optional-dependencies]
generation = ["anthropic>=0.40"]   # only for the default ClaudeGenerator

[tool.setuptools]
packages = ["libretto", "libretto.core", "libretto.generation", "libretto.tasks"]

[tool.setuptools.package-data]
# Ship the frozen data + prompts + per-task runbooks as package data.
libretto = ["data/*.json", "data/answer_key/*.json", "data/grammar/*.txt", "data/composing-kb/**", "data/kb_theory/**", "VERSION", "FROZEN_CORE.sha256"]
"libretto.generation" = ["prompts/*.md"]
"libretto.tasks" = ["*/SKILL.md", "*/*.py"]

[tool.pytest.ini_options]
testpaths = ["libretto/tests"]
